--- a/src/Client/UseCases/HumanResources/WorkersViewMenu.razor
+++ b/src/Client/UseCases/HumanResources/WorkersViewMenu.razor
@@ -5,7 +5,8 @@
     <BarMenu>
         <BarStart>
             <BarItem>
-                <BarLink To="UseCases/HumanResources/Pages/WorkersStartPage">Workers</BarLink>
+                <BarLink To="UseCases/HumanResources/DisplayEmployeesList/Pages/DisplayEmployeesListPage">Workers
+                </BarLink>
             </BarItem>
         </BarStart>
         <BarEnd>
